# SimpleEngine

./: CMakeLists.txt  main.cpp
src/: CombatComponent.cpp  CombatComponent.hpp  Enemy.cpp  Enemy.hpp  EnemyEntity.cpp  EnemyEntity.hpp  Entity.cpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  PlayerEntity.cpp  PlayerEntity.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextureHandler.cpp  TextureHandler.hpp
src/Entity/: Component.hpp  EnemyEntity.cpp  EnemyEntity.hpp  Entity.cpp  Entity.hpp  PlayerEntity.cpp  PlayerEntity.hpp  SpriteComponent.cpp  SpriteComponent.hpp
